# robsidian

./: Cargo.toml  README.md  ROBSIDIAN_CONTEXT.md  index.html  tauri.conf.json
capabilities/: default.json
src/: lib.rs  main.ts  styles.css  terminal.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  search.rs  terminal.rs
