[package]
name = "robsidian"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "robsidian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
font-loader = "0.11"
tauri-plugin-dialog = "2"

# --- 追加 ---
anyhow = "1.0" 
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
tauri-plugin-fs = "2.4.5"
walkdir = "2.5.0"
